Fixes for fade animaion and spacing.

--- a/src/containers/StartupProjects/StartupProjects.scss
+++ b/src/containers/StartupProjects/StartupProjects.scss
@@ -88,3 +88,7 @@
     text-align: center;
   }
 }
+
+#projects {
+  margin-top: 0rem;
+}
